--- a/SummaryStatisticNN/LinearExampleWithDropout.ipynb
+++ b/SummaryStatisticNN/LinearExampleWithDropout.ipynb
@@ -61,22 +61,22 @@
    },
    "cell_type": "code",
    "source": [
-    "no_params                  = 10\n",
-    "epochs                     = 200\n",
-    "patience_early_stopping    = 10           # Early-stopping window\n",
-    "neurons_per_layer          = 64\n",
-    "dropout_prob               = 0.2\n",
-    "always_on_dropout          = True         # Keep dropout active at test time\n",
+    "no_params = 10\n",
+    "epochs = 200\n",
+    "patience_early_stopping = 10  # Early-stopping window\n",
+    "neurons_per_layer = 64\n",
+    "dropout_prob = 0.2\n",
+    "always_on_dropout = True  # Keep dropout active at test time\n",
     "\n",
-    "batch_size     = 256                     # tf.data batch size\n",
-    "theta_range    = (0.0, 10.0)\n",
-    "n_per_sample   = 500                     # points (x, y) per simulated data-set\n",
-    "noise_std      = 0.5\n",
-    "n_examples     = 20_000                  # simulated data-sets to learn from\n",
+    "batch_size = 256  # tf.data batch size\n",
+    "theta_range = (0.0, 10.0)\n",
+    "n_per_sample = 500  # points (x, y) per simulated data-set\n",
+    "noise_std = 0.5\n",
+    "n_examples = 20_000  # simulated data-sets to learn from\n",
     "\n",
     "# evaluation\n",
     "no_test_samples = 10_000\n",
-    "mc_samples      = 50                     # Monte-Carlo dropout passes"
+    "mc_samples = 50  # Monte-Carlo dropout passes"
    ],
    "id": "c027d05bb9ed7ebc",
    "outputs": [],
@@ -108,7 +108,7 @@
     "    fig, (ax_lin, ax_log) = plt.subplots(2, 1, figsize=(6, 8), sharex=True)\n",
     "\n",
     "    # linear plot\n",
-    "    ax_lin.plot(epochs, history.history[\"loss\"],     label=\"train\")\n",
+    "    ax_lin.plot(epochs, history.history[\"loss\"], label=\"train\")\n",
     "    ax_lin.plot(epochs, history.history[\"val_loss\"], label=\"val\")\n",
     "    ax_lin.set_ylabel(\"MSE\")\n",
     "    ax_lin.set_title(title + \" (linear scale)\")\n",
@@ -116,7 +116,7 @@
     "    ax_lin.grid(True, which=\"both\", linestyle=\"--\", linewidth=0.5)\n",
     "\n",
     "    # semilog-y plot\n",
-    "    ax_log.semilogy(epochs, history.history[\"loss\"],     label=\"train\")\n",
+    "    ax_log.semilogy(epochs, history.history[\"loss\"], label=\"train\")\n",
     "    ax_log.semilogy(epochs, history.history[\"val_loss\"], label=\"val\")\n",
     "    ax_log.set_xlabel(\"Epoch\")\n",
     "    ax_log.set_ylabel(\"MSE (log scale)\")\n",
@@ -160,25 +160,25 @@
     "    \"\"\"Two-layer MLP with optional always-on dropout.\"\"\"\n",
     "\n",
     "    def __init__(self,\n",
-    "                 no_params     : int,\n",
-    "                 neurons       : int,\n",
-    "                 dropout_prob  : float = 0.0,\n",
+    "                 no_params: int,\n",
+    "                 neurons: int,\n",
+    "                 dropout_prob: float = 0.0,\n",
     "                 always_on_dropout: bool = False):\n",
     "        super(NN, self).__init__(name='NN')  # inherits the parent class and names it (for debugging)\n",
     "\n",
-    "        self.neurons            = neurons\n",
-    "        self.no_params          = no_params       # number of parameters we output\n",
-    "        self.always_on_dropout  = always_on_dropout  # if true then we leave on for test passes\n",
+    "        self.neurons = neurons\n",
+    "        self.no_params = no_params  # number of parameters we output\n",
+    "        self.always_on_dropout = always_on_dropout  # if true then we leave on for test passes\n",
     "\n",
     "        # Define our layers\n",
-    "        self.l1  = Dense(neurons, activation='relu', name='l1')\n",
-    "        self.do1 = Dropout(rate=dropout_prob,      name='do1')  # dropout layer 1\n",
-    "        self.l2  = Dense(neurons, activation='relu', name='l2')\n",
-    "        self.do2 = Dropout(rate=dropout_prob,      name='do2')  # dropout layer 2\n",
+    "        self.l1 = Dense(neurons, activation='relu', name='l1')\n",
+    "        self.do1 = Dropout(rate=dropout_prob, name='do1')  # dropout layer 1\n",
+    "        self.l2 = Dense(neurons, activation='relu', name='l2')\n",
+    "        self.do2 = Dropout(rate=dropout_prob, name='do2')  # dropout layer 2\n",
     "        self.out = Dense(no_params, activation=\"linear\", name=\"out\")  # Applies linear activation\n",
     "\n",
     "    def call(self,\n",
-    "             inputs  : tf.Tensor,\n",
+    "             inputs: tf.Tensor,\n",
     "             training: bool = False) -> tf.Tensor:\n",
     "        \"\"\"Forward pass with dropout flag logic.\"\"\"\n",
     "        dropout_flag = training or self.always_on_dropout\n",
@@ -189,7 +189,7 @@
     "        x = self.l2(x)\n",
     "        x = self.do2(x, training=dropout_flag)\n",
     "        x = self.out(x)\n",
-    "        return x                     # output size = no_params\n"
+    "        return x  # output size = no_params\n"
    ],
    "id": "7da4aedf7bd8745d",
    "outputs": [],
@@ -216,43 +216,44 @@
    },
    "cell_type": "code",
    "source": [
-    "def simulate_batch(no_params    : int,\n",
-    "                   batch_size   : int,\n",
-    "                   theta_range  : tuple,\n",
-    "                   n_per_sample : int,\n",
-    "                   noise_std    : float):\n",
+    "def simulate_batch(no_params: int,\n",
+    "                   batch_size: int,\n",
+    "                   theta_range: tuple,\n",
+    "                   n_per_sample: int,\n",
+    "                   noise_std: float):\n",
     "    \"\"\"Simulate one batch of (summary, θ, 1) pairs.\"\"\"\n",
     "    # Generate our theta, and random points which will be used to form the output variable\n",
-    "    theta = tf.random.uniform([batch_size, no_params, 1], *theta_range)     # (B, D, 1)\n",
-    "    X     = tf.random.uniform([batch_size, n_per_sample, no_params])        # (B, n, D)\n",
+    "    theta = tf.random.uniform([batch_size, no_params, 1], *theta_range)  # (B, D, 1)\n",
+    "    X = tf.random.uniform([batch_size, n_per_sample, no_params])  # (B, n, D)\n",
     "\n",
     "    # Generate noise and then create output variable\n",
-    "    noise = noise_std * tf.random.normal([batch_size, n_per_sample, 1])     # (B, n, 1)\n",
-    "    y     = tf.matmul(X, theta) + noise                                     # (B, n, 1)\n",
+    "    noise = noise_std * tf.random.normal([batch_size, n_per_sample, 1])  # (B, n, 1)\n",
+    "    y = tf.matmul(X, theta) + noise  # (B, n, 1)\n",
     "\n",
-    "    mean_x = tf.reduce_mean(X, axis=1)                                      # (B, D)\n",
-    "    mean_y = tf.reduce_mean(y, axis=1)                                      # (B, 1)\n",
+    "    mean_x = tf.reduce_mean(X, axis=1)  # (B, D)\n",
+    "    mean_y = tf.reduce_mean(y, axis=1)  # (B, 1)\n",
     "\n",
     "    # Center both x and y around their mean\n",
     "    xc = X - tf.expand_dims(mean_x, 1)\n",
     "    yc = y - tf.expand_dims(mean_y, 1)\n",
     "\n",
     "    # Create the covariance matrix for the data, then the covariance between x and y\n",
-    "    cov_x  = tf.matmul(xc, xc, transpose_a=True) / n_per_sample             # (B, D, D)\n",
-    "    cov_xy = tf.matmul(xc, yc, transpose_a=True) / n_per_sample             # (B, D, 1)\n",
+    "    cov_x = tf.matmul(xc, xc, transpose_a=True) / n_per_sample  # (B, D, D)\n",
+    "    cov_xy = tf.matmul(xc, yc, transpose_a=True) / n_per_sample  # (B, D, 1)\n",
     "\n",
     "    summary = tf.concat([\n",
     "        mean_x,\n",
     "        mean_y,\n",
-    "        tf.reshape(cov_x,  [-1, no_params*no_params]),\n",
+    "        tf.reshape(cov_x, [-1, no_params * no_params]),\n",
     "        tf.reshape(cov_xy, [-1, no_params]),\n",
-    "    ], axis=-1)                                                             # (B, D² + 2D + 1)\n",
+    "    ], axis=-1)  # (B, D² + 2D + 1)\n",
     "\n",
     "    return summary, theta\n",
     "\n",
-    "def make_dataset_multi_dim(n_examples : int,\n",
-    "                           no_params  : int,\n",
-    "                           batch_size : int) -> tf.data.Dataset:\n",
+    "\n",
+    "def make_dataset_multi_dim(n_examples: int,\n",
+    "                           no_params: int,\n",
+    "                           batch_size: int) -> tf.data.Dataset:\n",
     "    \"\"\"Create a tf.data pipeline emitting un-batched (summary, θ) pairs.\"\"\"\n",
     "    steps = n_examples // batch_size\n",
     "    ds = tf.data.Dataset.range(steps).map(\n",
@@ -279,14 +280,14 @@
    "cell_type": "code",
    "source": [
     "train_ds = make_dataset_multi_dim(\n",
-    "    n_examples = int(n_examples*0.9),\n",
-    "    no_params  = no_params,\n",
-    "    batch_size = batch_size\n",
+    "    n_examples=int(n_examples * 0.9),\n",
+    "    no_params=no_params,\n",
+    "    batch_size=batch_size\n",
     ")\n",
     "val_ds = make_dataset_multi_dim(\n",
-    "    n_examples = int(n_examples*0.1),\n",
-    "    no_params  = no_params,\n",
-    "    batch_size = batch_size\n",
+    "    n_examples=int(n_examples * 0.1),\n",
+    "    no_params=no_params,\n",
+    "    batch_size=batch_size\n",
     ")"
    ],
    "id": "c67cae1aafb2cb6b",
@@ -310,10 +311,10 @@
    "source": [
     "input_size = no_params ** 2 + 2 * no_params + 1\n",
     "\n",
-    "myNN = NN(neurons           = neurons_per_layer,\n",
-    "          no_params         = no_params,\n",
-    "          dropout_prob      = dropout_prob,\n",
-    "          always_on_dropout = always_on_dropout)\n",
+    "myNN = NN(neurons=neurons_per_layer,\n",
+    "          no_params=no_params,\n",
+    "          dropout_prob=dropout_prob,\n",
+    "          always_on_dropout=always_on_dropout)\n",
     "myNN.compile(loss='mse', optimizer=\"adam\")"
    ],
    "id": "3fa3b9ce418e70a",
@@ -337,10 +338,10 @@
    "source": [
     "history = myNN.fit(\n",
     "    train_ds.batch(batch_size),\n",
-    "    validation_data = val_ds.batch(batch_size),\n",
-    "    epochs          = epochs,\n",
-    "    callbacks       = [EarlyStopping(patience=patience_early_stopping,\n",
-    "                                     restore_best_weights=True)]\n",
+    "    validation_data=val_ds.batch(batch_size),\n",
+    "    epochs=epochs,\n",
+    "    callbacks=[EarlyStopping(patience=patience_early_stopping,\n",
+    "                             restore_best_weights=True)]\n",
     ")\n",
     "myNN.summary()\n",
     "plot_loss(history)"
@@ -707,35 +708,35 @@
    },
    "cell_type": "code",
    "source": [
-    "def average_relative_error(model         : tf.keras.Model,\n",
-    "                           batchsize     : int,\n",
-    "                           no_tests      : int,\n",
-    "                           mc_samples    : int,\n",
-    "                           n_per_sample  : int,\n",
-    "                           noise_std     : float,\n",
-    "                           theta_range   : tuple) -> float:\n",
+    "def average_relative_error(model: tf.keras.Model,\n",
+    "                           batchsize: int,\n",
+    "                           no_tests: int,\n",
+    "                           mc_samples: int,\n",
+    "                           n_per_sample: int,\n",
+    "                           noise_std: float,\n",
+    "                           theta_range: tuple) -> float:\n",
     "    \"\"\"Estimate mean relative error with Monte-Carlo dropout.\"\"\"\n",
     "    # Simulate a fresh batch\n",
     "    summaries, theta_true = simulate_batch(\n",
     "        no_params,\n",
-    "        batch_size   = no_tests,\n",
-    "        theta_range  = theta_range,\n",
-    "        n_per_sample = n_per_sample,\n",
-    "        noise_std    = noise_std,\n",
-    "    )                                   # shapes: (N, ·) and (N, D, 1)\n",
-    "    theta_true_np = np.squeeze(theta_true.numpy(), axis=-1)   # (N, D)\n",
+    "        batch_size=no_tests,\n",
+    "        theta_range=theta_range,\n",
+    "        n_per_sample=n_per_sample,\n",
+    "        noise_std=noise_std,\n",
+    "    )  # shapes: (N, ·) and (N, D, 1)\n",
+    "    theta_true_np = np.squeeze(theta_true.numpy(), axis=-1)  # (N, D)\n",
     "\n",
     "    # Monte-Carlo dropout passes\n",
     "    preds = [\n",
     "        model.predict(summaries, batch_size=batchsize, verbose=0)\n",
     "        for _ in range(mc_samples)\n",
     "    ]\n",
-    "    theta_pred_mean = np.mean(np.stack(preds, axis=0), axis=0)   # (N, D)\n",
+    "    theta_pred_mean = np.mean(np.stack(preds, axis=0), axis=0)  # (N, D)\n",
     "\n",
     "    # compute the relative error\n",
-    "    eps   = 1e-8\n",
-    "    diff  = theta_pred_mean - theta_true_np                       # (N, D)\n",
-    "    numer = np.linalg.norm(diff,        axis=1)                   # ‖θ̂ – θ‖₂\n",
+    "    eps = 1e-8\n",
+    "    diff = theta_pred_mean - theta_true_np  # (N, D)\n",
+    "    numer = np.linalg.norm(diff, axis=1)  # ‖θ̂ – θ‖₂\n",
     "    denom = np.linalg.norm(theta_true_np, axis=1) + eps\n",
     "    return (numer / denom).mean()\n"
    ],
@@ -753,13 +754,13 @@
    "cell_type": "code",
    "source": [
     "avg_re = average_relative_error(\n",
-    "    model         = myNN,\n",
-    "    batchsize     = batch_size,\n",
-    "    no_tests      = no_test_samples,\n",
-    "    mc_samples    = mc_samples,\n",
-    "    n_per_sample  = n_per_sample,\n",
-    "    noise_std     = noise_std,\n",
-    "    theta_range   = theta_range\n",
+    "    model=myNN,\n",
+    "    batchsize=batch_size,\n",
+    "    no_tests=no_test_samples,\n",
+    "    mc_samples=mc_samples,\n",
+    "    n_per_sample=n_per_sample,\n",
+    "    noise_std=noise_std,\n",
+    "    theta_range=theta_range\n",
     ")\n",
     "print(f\"Average relative error (MC-{mc_samples}): {avg_re:.4f}\")"
    ],
