Tested the ability to pick up on the sparsity

--- a/SummaryStatisticNN/LaplacePrior.ipynb
+++ b/SummaryStatisticNN/LaplacePrior.ipynb
@@ -18,8 +18,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-06-26T20:55:37.772582Z",
-     "start_time": "2025-06-26T20:55:37.766876Z"
+     "end_time": "2025-06-27T11:07:11.515690Z",
+     "start_time": "2025-06-27T11:07:09.080562Z"
     }
    },
    "source": [
@@ -53,13 +53,13 @@
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-26T20:55:37.779597Z",
-     "start_time": "2025-06-26T20:55:37.776968Z"
+     "end_time": "2025-06-27T11:07:11.520067Z",
+     "start_time": "2025-06-27T11:07:11.518086Z"
     }
    },
    "cell_type": "code",
@@ -86,7 +86,7 @@
    ],
    "id": "3b52b86a6ed26387",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -97,8 +97,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-26T20:55:37.875287Z",
-     "start_time": "2025-06-26T20:55:37.785569Z"
+     "end_time": "2025-06-27T11:07:13.435409Z",
+     "start_time": "2025-06-27T11:07:13.342867Z"
     }
    },
    "cell_type": "code",
@@ -109,7 +109,7 @@
    ],
    "id": "e9f056328817921e",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -363,8 +363,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-26T20:55:48.793019Z",
-     "start_time": "2025-06-26T20:55:48.791323Z"
+     "end_time": "2025-06-27T11:07:19.065550Z",
+     "start_time": "2025-06-27T11:07:19.062931Z"
     }
    },
    "cell_type": "code",
@@ -376,13 +376,13 @@
    ],
    "id": "fc5f3454a7e4d9f4",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-26T20:55:49.668942Z",
-     "start_time": "2025-06-26T20:55:48.798053Z"
+     "end_time": "2025-06-27T11:07:20.531415Z",
+     "start_time": "2025-06-27T11:07:20.268488Z"
     }
    },
    "cell_type": "code",
@@ -393,14 +393,18 @@
    "id": "e3c9e57466d7c028",
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Laplace test error : 0.1334\n"
+     "ename": "NameError",
+     "evalue": "name 'laplace_NN' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[5], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m e_laplace \u001B[38;5;241m=\u001B[39m laplace_avg_rel_error(model\u001B[38;5;241m=\u001B[39m\u001B[43mlaplace_NN\u001B[49m)\n\u001B[1;32m      2\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mLaplace test error : \u001B[39m\u001B[38;5;132;01m{\u001B[39;00me_laplace\u001B[38;5;132;01m:\u001B[39;00m\u001B[38;5;124m.4f\u001B[39m\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m)\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'laplace_NN' is not defined"
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 5
   },
   {
    "metadata": {
